[package]
name = "rlibcex"
version = "0.1.2"
authors = ["Jeff Waugh <jdub@bethesignal.org>"]
license = "MIT/Apache-2.0"

readme = "README.md"
homepage = "https://github.com/jdub/rlibcex"
repository = "https://github.com/jdub/rlibcex"
description = """
A partner to rlibc, with extra libc functions for freestanding Rust projects
"""
